hal: openisa: add openisa/RV32M1 entropy driver
Wrapper for openisa/RV32M1 TRNG driver

Signed-off-by: George Stefan <george.stefan@nxp.com>

--- a/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
+++ b/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
@@ -5,3 +5,4 @@ zephyr_sources_ifdef(CONFIG_UART_RV32M1_LPUART       fsl_lpuart.c)
 zephyr_sources_ifdef(CONFIG_I2C_RV32M1_LPI2C         fsl_lpi2c.c)
 zephyr_sources_ifdef(CONFIG_SPI_RV32M1_LPSPI         fsl_lpspi.c)
 zephyr_sources_ifdef(CONFIG_SOC_FLASH_RV32M1         fsl_flash.c)
+zephyr_sources_ifdef(CONFIG_ENTROPY_RV32M1_TRNG      fsl_trng.c)
