--- a/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
+++ b/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
@@ -4,5 +4,6 @@ zephyr_sources(fsl_clock.c)
 zephyr_sources_ifdef(CONFIG_UART_RV32M1_LPUART       fsl_lpuart.c)
 zephyr_sources_ifdef(CONFIG_I2C_RV32M1_LPI2C         fsl_lpi2c.c)
 zephyr_sources_ifdef(CONFIG_SPI_RV32M1_LPSPI         fsl_lpspi.c)
+zephyr_sources_ifdef(CONFIG_PWM_RV32M1_TPM           fsl_tpm.c)
 zephyr_sources_ifdef(CONFIG_SOC_FLASH_RV32M1         fsl_flash.c)
 zephyr_sources_ifdef(CONFIG_ENTROPY_RV32M1_TRNG      fsl_trng.c)
