hal: openisa: pass MIC status from CAUv3 on stack
Pass the status of the MIC validation to the caller

Signed-off-by: Cristi Caciuloiu <cristian.caciuloiu@nxp.com>

--- a/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
+++ b/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
@@ -7,3 +7,4 @@ zephyr_sources_ifdef(CONFIG_SPI_RV32M1_LPSPI         fsl_lpspi.c)
 zephyr_sources_ifdef(CONFIG_PWM_RV32M1_TPM           fsl_tpm.c)
 zephyr_sources_ifdef(CONFIG_SOC_FLASH_RV32M1         fsl_flash.c)
 zephyr_sources_ifdef(CONFIG_ENTROPY_RV32M1_TRNG      fsl_trng.c)
+zephyr_sources_ifdef(CONFIG_HAS_RV32M1_CAU3_BLE      fsl_cau3_ble.c)
