hal: openisa: Make watchdog available
The openisa hal watchdog driver provides a ready solution for the
watchdog disable on startup, so include it in the available drivers.

Signed-off-by: Karsten Koenig <karsten.koenig.030@gmail.com>

--- a/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
+++ b/vega_sdk_riscv/devices/RV32M1/drivers/CMakeLists.txt
@@ -1,6 +1,7 @@
 zephyr_include_directories(.)
 
 zephyr_library_sources(fsl_clock.c)
+zephyr_library_sources(fsl_wdog32.c)
 zephyr_library_sources_ifdef(CONFIG_ENTROPY_RV32M1_TRNG		fsl_trng.c)
 zephyr_library_sources_ifdef(CONFIG_HAS_RV32M1_CAU3_BLE		fsl_cau3_ble.c)
 zephyr_library_sources_ifdef(CONFIG_I2C_RV32M1_LPI2C		fsl_lpi2c.c)
