hal: openisa: Add Cortex-M cores
Add the device includes for the cortex m0plus and the m4 core of the
RV32M1.

Signed-off-by: Karsten Koenig <karsten.koenig.030@gmail.com>

--- a/vega_sdk_riscv/CMakeLists.txt
+++ b/vega_sdk_riscv/CMakeLists.txt
@@ -5,12 +5,16 @@ zephyr_include_directories(RISCV)
 zephyr_include_directories(devices/RV32M1)
 
 # The HAL uses a CPU name to expose core-specific features.
-# See fsl_device_registers.h and $CPU_RV32M1_{ri5cy,zero_riscy}_features.h
-# for details.
+# For details see fsl_device_registers.h and 
+# $CPU_RV32M1_{ri5cy,zero_riscy,m4,cm0plus}_features.h
 if(CONFIG_SOC_OPENISA_RV32M1_RI5CY)
   zephyr_compile_definitions(CPU_RV32M1_ri5cy)
-else()
+elseif(CONFIG_SOC_OPENISA_RV32M1_ZERO_RISCY)
   zephyr_compile_definitions(CPU_RV32M1_zero_riscy)
+elseif(CONFIG_SOC_OPENISA_RV32M1_M4)
+  zephyr_compile_definitions(CPU_RV32M1_cm4)
+elseif(CONFIG_SOC_OPENISA_RV32M1_M0PLUS)
+  zephyr_compile_definitions(CPU_RV32M1_cm0plus)
 endif()
 
 add_subdirectory(devices/RV32M1/drivers)
